@@ -1,3 +1,7 @@
+2003-12-14 Craig Franklin <craigfranklin@comcast.net>
+  * Fixed a bug in gpasm 18xx absolute data memory sections that caused the 
+    address to be wrong.
+  
 2003-12-01 Craig Franklin <craigfranklin@comcast.net>
   * Changed gpasm behavior so cblocks are only processed when assembly is
     enabled. 
